# hard-prompts-made-easy

./: .windsurfrules  optimization_results.txt  pyproject.toml  requirements.txt  run.py  sample_config.json  setup.py  tokenization_analysis.txt
.github/workflows/: python-ci.yml
examples/scripts/: blocklist_example.py  negative_prompt.py  prompt_distillation.py  prompt_inversion.py  prompt_inversion_sd.py  style_transfer.py
new_examples/: basic_usage.py
src/prompt_optim/: README.md  __init__.py
src/prompt_optim/config/: optim_config.py
src/prompt_optim/core/: base_optimizer.py  optim_utils.py
src/prompt_optim/models/: __init__.py  clip_models.py
src/prompt_optim/optimizers/: basic.py
tests/: __init__.py  conftest.py  test_basic_optimizer.py  test_integration.py
tests/test_config/: test_optim_config.py
tests/test_core/: test_base_optimizer.py
tests/test_optimizers/: test_basic_optimizer.py
transfer/: README.md  alternative_models.md  architecture.md  configuration_guide.md  dependencies.md  example_analysis.md  implementation_details.md  optimization_process.md  project_structure.md  refactor_strategy.md
