[project]
name = "hard-prompts-made-easy"
version = "0.1.0"
description = "Gradient-Based Discrete Optimization for Prompt Tuning and Discovery"
authors = [
    {name = "Yuxin Wen", email = "ywen@umd.edu"},
]
dependencies = [
    "torch>=2.5.1",
    "transformers>=4.37.2",
    "sentence-transformers>=2.5.1",
    "ftfy>=6.1.3",
    "mediapy>=1.1.2",
    "diffusers>=0.25.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE.md"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
